--- a/NonAdminTesting/index.html
+++ b/NonAdminTesting/index.html
@@ -1,11 +1,24 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div class="classname"></div>
-    3
+    <div class="classname">Content</div>
+</body>
+</html>
+
+
+<style>
+
+.classname{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+}
+
+</style>
