--- a/NonAdminTesting/index.html
+++ b/NonAdminTesting/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color:rgb(58, 15, 2);">
     <div class="classname">Content</div>
 </body>
 </html>
